2012-05-23  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/powerpc/chown.c: Add comment suggesting
	move to syscalls.list.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pwrite64.c: Likewise.

	* manual/install.texi (Running make install): Do not mention Linux
	kernel version for which pt_chown is not needed.
	(Linux): Do not mention problems with nscd with 2.0 kernels.
	* INSTALL: Regenerated.

2012-05-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/powerpc/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): New macros from Linux 3.4.
	macro.
	* sysdeps/unix/sysv/linux/s390/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/bits/in.h
	(IP_MULTICAST_ALL,IP_UNICAST_IF): Likewise.

2012-05-22  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/dl-vdso.h (CHECK_HASH): Macro removed.
	(PREPARE_VERSION): Just use assert instead, it will be elided
	under [NDEBUG] anyway.

2012-05-22  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/Makefile: Include
	$(firstword $(wildcard $(sysdirs:=/sysctl.mk))).
	(sysdep_routines): Remove sysctl.
	* sysdeps/unix/sysv/linux/bits/sysctl.h: New file.
	* sysdeps/unix/sysv/linux/sysctl.mk: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/sysctl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/sysctl.mk: Likewise.
	* sysdeps/unix/sysv/linux/sys/sysctl.h: Include <bits/sysctl.h>.

2012-05-22  Andreas Jaeger  <aj@suse.de>
